force-app/main/default/objects/Product__c/fields/Part__c.field-meta.xml
<CustomField>
    <fullName>Part__c</fullName>
    <description>Rate Code</description>
    <encryptionScheme>None</encryptionScheme>
    <label>Part #</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>